# noisepage

./: .clang-format  .clang-tidy  .clang-tidy-ignore  .codecov.yml  .dockerignore  .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakeSettings.json  DESIGN.md  Design Documentation.md  DesignDocument.md  Dockerfile  Jenkinsfile  Jenkinsfile-nightly  Jenkinsfile-nightly-v2  Jenkinsfile-utils  Jenkinsfile-utils.groovy  LICENSE  Makefile  P3DesignDoc.md  README.md  Untitled.ipynb  addDropIndexDesign.md  bot-test.txt  codecov.yml  predict.ipynb  replication.config  requirements.txt  test.txt  tpccbench.py
benchmark/: CMakeLists.txt  README.md
benchmark/benchmark_util/: benchmark_config.cpp  benchmark_main.cpp  data_table_benchmark_util.cpp
benchmark/catalog/: catalog_benchmark.cpp
benchmark/common/: perf_monitor_benchmark.cpp
benchmark/integration/: tpcc_benchmark.cpp
benchmark/metrics/: execution_thread_pool_benchmark.cpp  garbage_collection_metrics_benchmark.cpp  large_transaction_metrics_benchmark.cpp  logging_metrics_benchmark.cpp  metrics_benchmark.cpp
benchmark/mini_runner/: transaction_logging_gc_runner.cpp
benchmark/parser/: parser_benchmark.cpp
benchmark/replication/: replication_messages_benchmark.cpp
benchmark/runner/: CMakeLists.txt  README.md  compilation_runner.cpp  execution_runners.cpp  join_hash_table_benchmark.cpp  mini_runners.cpp  procbench_runner.cpp  tpcc_runner.cpp  tpch_runner.cpp  transaction_logging_gc_runner.cpp
benchmark/storage/: block_compactor_benchmark.cpp  bplustree_benchmark.cpp  bwtree_benchmark.cpp  checkpoint_benchmark.cpp  checkpoint_recovery_benchmark.cpp  cuckoomap_benchmark.cpp  data_table_benchmark.cpp  decimal_benchmark.cpp  disk_benchmark.cpp  garbage_collector_benchmark.cpp  index_wrapper_benchmark.cpp  logging_benchmark.cpp  metric_benchmark.cpp  parallel_scan_benchmark.cpp  recovery_benchmark.cpp  slot_iterator_benchmark.cpp  sql_table_benchmark.cpp  tuple_access_strategy_benchmark.cpp  update_schema_benchmark.cpp  varlen_entry_benchmark.cpp  varlen_entry_hash_benchmark.cpp
benchmark/tpcc/: tpcc_benchmark.cpp
benchmark/transaction/: large_transaction_benchmark.cpp  seqscan_benchmark.cpp
benchmark/util/: benchmark_main.cpp  data_table_benchmark_util.cpp  transaction_benchmark_util.cpp
src/: CMakeLists.txt
src/benchmark/: CTestTestfile.cmake  cmake_install.cmake
src/binder/: bind_node_visitor.cpp  binder_context.cpp  binder_cte_util.cpp  binder_sherpa.cpp  binder_util.cpp  sql_node_visitor.cpp  table_ref_dependency_graph.cpp
src/brain/: brain_util.cpp  operating_unit.cpp  operating_unit_recorder.cpp  operating_unit_util.cpp  pilot_util.cpp
src/catalog/: attr_def_handle.cpp  attribute_handle.cpp  catalog.cpp  catalog_accessor.cpp  catalog_defs.cpp  class_handle.cpp  database_catalog.cpp  database_handle.cpp  index_handle.cpp  index_schema.cpp  namespace_handle.cpp  schema.cpp  settings_handle.cpp  table_handle.cpp  tablespace_handle.cpp  type_handle.cpp
src/common/: action_context.cpp  exception.cpp  gate.cpp  graph.cpp  graph_algorithm.cpp  hash_util.cpp  init.cpp  internal_types.cpp  io_timeout_event.cpp  logger.cpp  math_util.cpp  notifiable_task.cpp  posix_io_wrappers.cpp  printable.cpp  sql_node_visitor.cpp  statistics.cpp  strong_typedef.cpp  thread_context.cpp  time_util.cpp  utility.cpp
src/execution/: CMakeLists.txt  aggregation.cpp  bloom_filter_accessor.cpp  buffer_accessor.cpp  buffering_consumer.cpp  code_context.cpp  codegen.cpp  compact_storage.cpp  compilation_context.cpp  consumer_context.cpp  counting_consumer.cpp  deleter.cpp  exec_defs.cpp  executable_query.cpp  execution_consumer.cpp  execution_context.cpp  executor_context.cpp  function_builder.cpp  hash.cpp  hash_table.cpp  inserter.cpp  oa_hash_table.cpp  parameter_cache.cpp  pipeline.cpp  query.cpp  query_cache.cpp  query_compiler.cpp  query_state.cpp  row_batch.cpp  runtime_functions.cpp  sorter.cpp  table.cpp  table_storage.cpp  tile_group.cpp  tpl.cpp  tpl.h.in  transaction_runtime.cpp  translator_factory.cpp  updateable_storage.cpp  updater.cpp  (+3 more)
src/index/: bwtree.cpp
src/loggers/: binder_logger.cpp  catalog_logger.cpp  common_logger.cpp  execution_logger.cpp  index_logger.cpp  loggers_util.cpp  main_logger.cpp  messenger_logger.cpp  metrics_logger.cpp  model_logger.cpp  model_server_logger.cpp  network_logger.cpp  optimizer_logger.cpp  parser_logger.cpp  replication_logger.cpp  selfdriving_logger.cpp  settings_logger.cpp  storage_logger.cpp  test_logger.cpp  transaction_logger.cpp  type_logger.cpp
src/logging/: log_buffer.cpp  recovery_manager.cpp
src/main/: db_main.cpp  main_database.cpp  main_stat_registry.cpp  noisepage.cpp  startup.sql  terrier.cpp
src/messenger/: connection_destination.cpp  messenger.cpp  messenger_defs.cpp  messenger_logic.cpp
src/metric/: metrics_manager.cpp  metrics_store.cpp  stats_aggregator.cpp  thread_level_metrics_store.cpp  thread_level_stats_collector.cpp
src/metrics/: metrics_manager.cpp  metrics_store.cpp  query_trace_metric.cpp
src/model_server/: model_server_manager.cpp
src/network/: README  README.md  command_factory.cpp  connection_dispatcher_task.cpp  connection_handle.cpp  connection_handle_factory.cpp  connection_handler_task.cpp  marshal.cpp  network_defs.cpp  network_io_wrapper.cpp  network_io_wrappers.cpp  noisepage_server.cpp  peloton_server.cpp  postgres_command_factory.cpp  postgres_network_commands.cpp  postgres_protocol_interpreter.cpp  postgres_protocol_utils.cpp  terrier_server.cpp
src/optimizer/: abstract_optimizer_node_contents.cpp  analyze.cpp  binding.cpp  child_property_deriver.cpp  expression_node_contents.cpp  group.cpp  group_expression.cpp  index_util.cpp  input_column_deriver.cpp  logical_operators.cpp  memo.cpp  operator_expression.cpp  operator_node.cpp  operator_node_contents.cpp  operators.cpp  optimizer.cpp  optimizer_context.cpp  optimizer_defs.cpp  optimizer_task.cpp  physical_operator.cpp  physical_operators.cpp  plan_generator.cpp  (+9 more)
test/: CMakeLists.txt  CPPLINT.cfg  CTestCustom.cmake
util/: CMakeLists.txt
(+3353 files in other folders)
